--- a/tutorbright_coding_project/src/app/top-albums/top-albums.component.html
+++ b/tutorbright_coding_project/src/app/top-albums/top-albums.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1 class="text-center my-4">Top 100 Albums</h1>
     <div class="row">
-      <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let album of top100Albums">
+      <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let album of (top100Albums | async)">
         <div class="card mb-4">
           <img [src]="album['im:image'][2].label" class="card-img-top" alt="{{ album['im:name'].label }}">
           <div class="card-body">
