--- a/tutorbright_coding_project/src/app/app.component.html
+++ b/tutorbright_coding_project/src/app/app.component.html
@@ -1,21 +1,17 @@
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-
-    <!-- <div class="spacer"></div> -->
-
-</div>
-
-<div class="content" role="main">
-  
+<div class="content">
   <!-- Highlight Card -->
-  <div class="card highlight-card card-small">
-    <span>Here you will see the top 100 albums from Itunes</span>
+  <div class="bg-dark collapse show" id="navbarHeader">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-7 py-4">
+          <h1 class="text-white">Welcome to the Top 100 Albums</h1>
+          <h6 class="text-white">Discover the latest music hits and enjoy listening to your favorite artists.</h6>
+        </div>
+      </div>
+    </div>
   </div>
 
-
-  <div class="card-container">
+  <div class="container ">
     <app-album-list></app-album-list>
   </div>
 </div>
-
-<router-outlet></router-outlet>
