--- a/tutorbright_coding_project/src/app/top-albums/top-albums.component.html
+++ b/tutorbright_coding_project/src/app/top-albums/top-albums.component.html
@@ -1,21 +1,34 @@
-<div class="container">
-    <h1 class="text-center my-4">Top 100 Albums from Itunes</h1>
-    <div class="form-group">
-        <label for="typeahead-basic">Search for a album with artist name or album name:</label>
-        <input type="text" class="form-control" placeholder="Search for albums" [(ngModel)]="searchTerm" (input)="onSearch()">
-      </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let album of (filteredAlbums  | async)">
-        <div class="card mb-4">
-          <img [src]="album['im:image'][2].label" class="card-img-top" alt="{{ album['im:name'].label }}">
-          <div class="card-body">
-            <h5 class="card-title">{{ album['im:name'].label }}</h5>
-            <p class="card-text">Artist: {{ album['im:artist'].label }}</p>
-            <p class="card-text">Price: {{ album['im:price'].label }}</p>
-            <a [href]="album.link.attributes.href" class="btn btn-primary" target="_blank">Listen on Apple Music</a>
-          </div>
-        </div>
+<div class="container mt-4">
+    <div class="row mb-3">
+      <div class="col-lg-6 offset-lg-0">
+        <input type="text" class="form-control" placeholder="Search for albums with artist or album name" [(ngModel)]="searchTerm" (input)="onSearch()">
       </div>
     </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let album of (filteredAlbums | async)">
+            <div class="card mb-4 box-shadow">
+                <img [src]="album['im:image'][2].label" class="card-img-top" alt="{{ album['im:name'].label }}">
+                <div class="card-body">
+                <h5 class="card-title">{{ album['im:name'].label }}</h5>
+                <p class="card-text">Artist: {{ album['im:artist'].label }}</p>
+                <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    <a [href]="album.link.attributes.href" class="btn btn-primary btn-block" target="_blank">Listen on Apple Music</a>
+                </div>
+                <p class="text-muted">Price: {{ album['im:price'].label }}</p>
+                </div>
+            </div>
+        </div>
+        </div>
+      </div>
   </div>
   
+
+
+
+
+
+
+
+
+
