--- a/tutorbright_coding_project/src/app/top-albums/top-albums.component.html
+++ b/tutorbright_coding_project/src/app/top-albums/top-albums.component.html
@@ -1,34 +1,52 @@
 <div class="container mt-4">
-    <div class="row mb-3">
-      <div class="col-lg-6 offset-lg-0">
-        <input type="text" class="form-control" placeholder="Search for albums with artist or album name" [(ngModel)]="searchTerm" (input)="onSearch()">
+  <div class="row mb-3">
+    <div class="col-lg-6 offset-lg-0">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Search for albums with artist or album name"
+        [(ngModel)]="searchTerm"
+        (input)="onSearch()"
+      />
+    </div>
+  </div>
+  <div class="row mb-3">
+    <div class="col-lg-2 text-end">
+      <select class="form-select" [(ngModel)]="sortCriteria" (change)="onSortChange()">
+        <option value="priceHighToLow">Price: High to Low</option>
+        <option value="priceLowToHigh">Price: Low to High</option>
+        <option value="dateNewToOld">Release Date: Newest to Oldest</option>
+        <option value="dateOldToNew">Release Date: Oldest to Newest</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div
+      class="col-lg-4 col-md-6 col-sm-12"
+      *ngFor="let album of filteredAlbums | async"
+    >
+      <div class="card mb-4 box-shadow">
+        <img
+          [src]="album['im:image'][2].label"
+          class="card-img-top"
+          alt="{{ album['im:name'].label }}"
+        />
+        <div class="card-body">
+          <h5 class="card-title">{{ album["im:name"].label }}</h5>
+          <p class="card-text">Artist: {{ album["im:artist"].label }}</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <a
+                [href]="album.link.attributes.href"
+                class="btn btn-primary btn-block"
+                target="_blank"
+                >Listen on Apple Music</a
+              >
+            </div>
+            <p class="text-muted">Price: {{ album["im:price"].label }}</p>
+          </div>
+        </div>
       </div>
     </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let album of (filteredAlbums | async)">
-            <div class="card mb-4 box-shadow">
-                <img [src]="album['im:image'][2].label" class="card-img-top" alt="{{ album['im:name'].label }}">
-                <div class="card-body">
-                <h5 class="card-title">{{ album['im:name'].label }}</h5>
-                <p class="card-text">Artist: {{ album['im:artist'].label }}</p>
-                <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <a [href]="album.link.attributes.href" class="btn btn-primary btn-block" target="_blank">Listen on Apple Music</a>
-                </div>
-                <p class="text-muted">Price: {{ album['im:price'].label }}</p>
-                </div>
-            </div>
-        </div>
-        </div>
-      </div>
   </div>
-  
-
-
-
-
-
-
-
-
-
+</div>
